--- a/main.html
+++ b/main.html
@@ -7,7 +7,48 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <form method="post">
+	
+    <label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name" required name="Name">
+<br>
+		<label for="email">Email</label>
+		<input type="email" name="Email" id="email" placeholder="Email" required>
+<br>
+		<label for="gender">Gender</label>
+		<label><input type="radio" name="Gender" id="gender" required>Male</label>
+		<label><input type="radio" name="Gender" id="gender" required>Female</label>
+<br>
+		<label for="cars">Car Brands:</label>
+
+<select name="cars" id="cars" required >
+  <option value="volvo">Volvo</option>
+  <option value="saab">Saab</option>
+  <option value="mercedes">Mercedes</option>
+  <option value="audi">Audi</option>
+</select>
+<br>
+<label for="age">Age</label>
+		<input type="number" id="age" placeholder="Age" required>
+<br>
+<label for="dob">DOB</label>
+		<input type="date" id="dob" required>
+<br>
+		<label for="tel">Phone Number</label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
+<br>
+		<label for="password">Password</label>
+		<input type="password" id="password" placeholder="password" required>
+	<br>
+<label for="tos">I agree to the TOS</label>
+		<input type="checkbox" id="tos" required>
+
+
+	
+		
+	</form>
+
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
