--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 		<input type="email" name="Email" id="email" placeholder="Email" required>
 <br>
 		<label for="gender">Gender</label>
-		<label><input type="radio" name="Gender" id="gender" required>Male</label>
-		<label><input type="radio" name="Gender" id="gender" required>Female</label>
+		<label><input type="radio" name="gender" id="gender" required>Male</label>
+		<label><input type="radio" name="gender" id="gender" required>Female</label>
 <br>
 		<label for="cars">Car Brands:</label>
 
@@ -42,7 +42,9 @@
 	<br>
 <label for="tos">I agree to the TOS</label>
 		<input type="checkbox" id="tos" required>
-
+<br>
+		<label for="submt"></label>
+		<input type="submit" name=Submit required id="submt" >
 
 	
 		
