--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 		<input type="checkbox" id="tos" required>
 <br>
 		<label for="submt"></label>
-		<input type="submit" name=Submit required id="submt" >
+		<button type="submit" name="Submit" required id="submt" >Submit</button>
 
 	
 		
